[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/theme.theme" type="Theme" id=1]
[ext_resource path="res://scene/panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/craft-container.gd" type="Script" id=3]

[node name="container" type="MarginContainer"]
margin_right = 1024.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 64.0

[node name="con" type="MarginContainer" parent="hbox"]
margin_right = 64.0
margin_bottom = 64.0

[node name="panel1" parent="hbox/con" instance=ExtResource( 2 )]

[node name="vbox" type="VBoxContainer" parent="hbox"]
margin_left = 68.0
margin_right = 196.0
margin_bottom = 64.0

[node name="name" type="Label" parent="hbox/vbox"]
margin_right = 128.0
margin_bottom = 29.0
text = "Hello world"

[node name="category" type="Label" parent="hbox/vbox"]
margin_top = 33.0
margin_right = 128.0
margin_bottom = 62.0
text = "Food"

[connection signal="mouse_entered" from="." to="." method="_on_container_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_container_mouse_exited"]
